# polymarket-multiagent-maker-lab

./: PLAN.md  README.md  pyproject.toml
src/pm_maker_lab/ai/: linucb.py
src/pm_maker_lab/core/: orderbook.py
src/pm_maker_lab/execution/: network.py
src/pm_maker_lab/risk/: limits.py
src/pm_maker_lab/sim/: engine.py  runner.py
src/pm_maker_lab/strategy/: fair_value.py
tests/: test_fair_value.py  test_linucb.py  test_network.py  test_orderbook.py  test_risk.py  test_sim.py
