[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-multiagent-maker-lab"
version = "0.1.0"
description = "AI + networking-aware Polymarket market making simulation lab"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Felix Bot" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
